--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
         "start": "d2-app-scripts start",
         "start:nobrowser": "BROWSER=none d2-app-scripts start",
         "test": "TZ=Etc/UTC d2-app-scripts test",
-        "test_win": "set TZ=Etc/UTC && d2-app-scripts test",
-        "test_win1": "react-scripts test",
         "cypress:capture-v37": "start-server-and-test 'yarn start:nobrowser' http://localhost:3000 'yarn cypress run --env dhis2ApiVersion=37,dhis2BaseUrl=http://localhost:8082,networkMode=capture'",
         "cypress:stub-v37": "start-server-and-test 'yarn start:nobrowser' http://localhost:3000 'yarn cypress run --env dhis2ApiVersion=37,dhis2BaseUrl=http://localhost:8082,networkMode=stub'",
         "cypress:capture-v38": "start-server-and-test 'yarn start:nobrowser' http://localhost:3000 'yarn cypress run --env dhis2ApiVersion=38,dhis2BaseUrl=http://localhost:8081,networkMode=capture'",
@@ -49,6 +47,9 @@
         "@dhis2/ui": "^9.11.8",
         "dompurify": "^3.1.6",
         "history": "^5.0.1",
+        "install": "^0.13.0",
+        "jest": "^29.7.0",
+        "npm": "^11.0.0",
         "prop-types": "^15.7.2",
         "query-string": "^7.0.1",
         "use-debounce": "^7.0.0"
