--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
     },
     "dependencies": {
         "@dhis2/app-runtime": "^3.2.1",
+        "@dhis2/multi-calendar-dates": "^2.0.0",
         "@dhis2/prop-types": "^1.6.4",
         "@dhis2/ui": "^7.2.7",
         "dompurify": "^3.1.6",
         "history": "^5.0.1",
         "prop-types": "^15.7.2",
         "query-string": "^7.0.1",
+        "react-scripts": "^5.0.1",
         "use-debounce": "^7.0.0"
     }
 }
